@@ -1,4 +1,5 @@
-﻿zapret v.10
+﻿zapret v.11
+
 Для чего это надо
 -----------------
 
@@ -115,6 +116,7 @@ tpws - это transparent proxy.
  --hostdot		; добавление точки после имени хоста : "Host: kinozal.tv."
  --methodspace		; добавить пробел после метода : "GET /" => "GET  /"
 Параметры манипуляции могут сочетаться в любых комбинациях.
+Есть исключение : split-pos заменяет split-http-req.
  
 Провайдеры
 ----------
@@ -152,17 +154,23 @@ tiera : сама тиера до последнего ничего не бани
 несколько Мб и продолжает расти. На роутерах openwrt /tmp представляет собой tmpfs , то есть ramdisk.
 В случае роутера с 32 мб памяти ее может не хватить, и будут проблемы. В этом случае используйте
 следующий скрипт.
-Скрипт автоматически вызывает ipset/get_user.sh и обновляет ipset
 
 3) ipset/get_anizapret.sh. быстро и без нагрузки на роутер получает лист с http://antizapret.prostovpn.org.
-Скрипт автоматически вызывает ipset/get_user.sh и обновляет ipset
+
+Все варианты рассмотренных скриптов автоматически создают и заполняют ipset.
+Варианты 2 и 3 дополнительно вызывают вариант 1.
 
 На роутерах не рекомендуется вызывать эти скрипты чаще раза за 2 суток, поскольку сохранение идет
 либо во внутреннюю флэш память роутера, либо в случае extroot - на флэшку.
 В обоих случаях слишком частая запись может убить флэшку, но если это произойдет с внутренней
 флэш памятью, то вы просто убьете роутер.
 
-Обновление ipset выполняет скрипт ipset/create_ipset.sh
+Принудительное обновление ipset выполняет скрипт ipset/create_ipset.sh
+
+Можно внести список доменов в ipset/zapret-hosts-user-ipban.txt. Их ip адреса будут помещены
+в отдельный ipset "ipban". Он может использоваться для принудительного завертывания всех
+соединений на прозрачный proxy "redsocks".
+
 
 Пример установки на debian 7
 ----------------------------
@@ -207,6 +215,7 @@ ubuntu 12,14
 Имеется готовый конфиг для upstart : zapret.conf. Его нужно скопировать в /etc/init и настроить по аналогии с debian.
 Запуск службы : "start zapret"
 Останов службы : "stop zapret"
+Ubuntu 12 так же, как и debian 7, оснащено ядром 3.2. См замечание в разделе "debian 7".
 
 Другие linux системы
 --------------------
